Retrieval class.